as8/sample/ExprParser.output
Grammar

    0 $accept: input $end

    1 input: input command
    2      | command

    3 command: exp '\n'
    4        | '\n'

    5 exp: exp '+' term
    6    | exp '-' term
    7    | term

    8 term: term '*' pow
    9     | term '/' pow
   10     | term '%' pow
   11     | pow

   12 pow: factor '^' pow
   13    | factor

   14 factor: NUMBER
   15       | '-' NUMBER
   16       | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'%' (37) 10
'(' (40) 16
')' (41) 16
'*' (42) 8
'+' (43) 5
'-' (45) 6 15
'/' (47) 9
'^' (94) 12
error (256)
NUMBER (258) 14 15


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
input (14)
    on left: 1 2, on right: 0 1
command (15)
    on left: 3 4, on right: 1 2
exp (16)
    on left: 5 6 7, on right: 3 5 6 16
term (17)
    on left: 8 9 10 11, on right: 5 6 7 8 9 10
pow (18)
    on left: 12 13, on right: 8 9 10 11 12
factor (19)
    on left: 14 15 16, on right: 12 13


State 0

    0 $accept: . input $end

    NUMBER  shift, and go to state 1
    '\n'    shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    input    go to state 5
    command  go to state 6
    exp      go to state 7
    term     go to state 8
    pow      go to state 9
    factor   go to state 10


State 1

   14 factor: NUMBER .

    $default  reduce using rule 14 (factor)


State 2

    4 command: '\n' .

    $default  reduce using rule 4 (command)


State 3

   15 factor: '-' . NUMBER

    NUMBER  shift, and go to state 11


State 4

   16 factor: '(' . exp ')'

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    exp     go to state 12
    term    go to state 8
    pow     go to state 9
    factor  go to state 10


State 5

    0 $accept: input . $end
    1 input: input . command

    $end    shift, and go to state 13
    NUMBER  shift, and go to state 1
    '\n'    shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    command  go to state 14
    exp      go to state 7
    term     go to state 8
    pow      go to state 9
    factor   go to state 10


State 6

    2 input: command .

    $default  reduce using rule 2 (input)


State 7

    3 command: exp . '\n'
    5 exp: exp . '+' term
    6    | exp . '-' term

    '\n'  shift, and go to state 15
    '+'   shift, and go to state 16
    '-'   shift, and go to state 17


State 8

    7 exp: term .
    8 term: term . '*' pow
    9     | term . '/' pow
   10     | term . '%' pow

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 7 (exp)


State 9

   11 term: pow .

    $default  reduce using rule 11 (term)


State 10

   12 pow: factor . '^' pow
   13    | factor .

    '^'  shift, and go to state 21

    $default  reduce using rule 13 (pow)


State 11

   15 factor: '-' NUMBER .

    $default  reduce using rule 15 (factor)


State 12

    5 exp: exp . '+' term
    6    | exp . '-' term
   16 factor: '(' exp . ')'

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    ')'  shift, and go to state 22


State 13

    0 $accept: input $end .

    $default  accept


State 14

    1 input: input command .

    $default  reduce using rule 1 (input)


State 15

    3 command: exp '\n' .

    $default  reduce using rule 3 (command)


State 16

    5 exp: exp '+' . term

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    term    go to state 23
    pow     go to state 9
    factor  go to state 10


State 17

    6 exp: exp '-' . term

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    term    go to state 24
    pow     go to state 9
    factor  go to state 10


State 18

    8 term: term '*' . pow

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    pow     go to state 25
    factor  go to state 10


State 19

    9 term: term '/' . pow

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    pow     go to state 26
    factor  go to state 10


State 20

   10 term: term '%' . pow

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    pow     go to state 27
    factor  go to state 10


State 21

   12 pow: factor '^' . pow

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    pow     go to state 28
    factor  go to state 10


State 22

   16 factor: '(' exp ')' .

    $default  reduce using rule 16 (factor)


State 23

    5 exp: exp '+' term .
    8 term: term . '*' pow
    9     | term . '/' pow
   10     | term . '%' pow

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 5 (exp)


State 24

    6 exp: exp '-' term .
    8 term: term . '*' pow
    9     | term . '/' pow
   10     | term . '%' pow

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 6 (exp)


State 25

    8 term: term '*' pow .

    $default  reduce using rule 8 (term)


State 26

    9 term: term '/' pow .

    $default  reduce using rule 9 (term)


State 27

   10 term: term '%' pow .

    $default  reduce using rule 10 (term)


State 28

   12 pow: factor '^' pow .

    $default  reduce using rule 12 (pow)
